// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNotebookInfo returns the correct notebookInfo 1`] = `
Object {
  "jupyter": Object {
    "category": "ANALYSIS",
    "displayName": "Jupyter",
    "versions": Array [
      Object {
        "displayName": "Dask 2021.6/Spark 3.1.2",
        "image": "nerc/jupyterlab:361bf5ba6ca6-spark-3.1.2",
      },
    ],
  },
  "jupyterlab": Object {
    "category": "ANALYSIS",
    "displayName": "JupyterLab",
    "versions": Array [
      Object {
        "displayName": "Dask 2021.6/Spark 3.1.2",
        "image": "nerc/jupyterlab:361bf5ba6ca6-spark-3.1.2",
      },
    ],
  },
  "rstudio": Object {
    "category": "ANALYSIS",
    "displayName": "RStudio",
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rstudio:4.0.1",
      },
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "displayName": "3.5.3",
        "image": "nerc/rstudio:3.5.3",
      },
    ],
  },
  "zeppelin": Object {
    "category": "ANALYSIS",
    "displayName": "Zeppelin",
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "displayName": "0.7.2.7",
        "image": "nerc/zeppelin:0.7.2.7",
      },
    ],
  },
}
`;

exports[`getSiteInfo returns the correct siteInfo 1`] = `
Object {
  "nbviewer": Object {
    "category": "PUBLISH",
    "displayName": "NBViewer",
    "versions": Array [
      Object {
        "displayName": "Latest",
        "image": "jupyter/nbviewer:latest",
      },
    ],
  },
  "panel": Object {
    "category": "PUBLISH",
    "displayName": "Panel",
    "userCanChooseConda": true,
    "userCanChooseFile": true,
    "versions": Array [
      Object {
        "displayName": "Latest",
        "image": "nerc/jupyterlab:361bf5ba6ca6-spark-3.1.2",
      },
    ],
  },
  "rshiny": Object {
    "category": "PUBLISH",
    "displayName": "RShiny",
    "userActionOverrides": Object {
      "logs": true,
    },
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rshiny:4.0.1",
      },
      Object {
        "displayName": "3.5.3",
        "image": "nerc/rshiny:3.5.3",
      },
    ],
  },
  "voila": Object {
    "category": "PUBLISH",
    "displayName": "Voila",
    "userCanChooseFile": true,
    "versions": Array [
      Object {
        "displayName": "Latest",
        "image": "nerc/jupyterlab:361bf5ba6ca6-spark-3.1.2",
      },
    ],
  },
}
`;

exports[`getUserActionsForType returns all as true if cannot find type 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "scale": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with logs userActionOverrides 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "scale": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with no logs userActionOverrides 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": false,
  "restart": true,
  "scale": true,
  "share": true,
}
`;
